# ReCue

./: .gitattributes  .gitignore  .prettierignore  .recue-updater.key.pub  ASSUMPTIONS.md  CLAUDE.md  KANBAN.md  PROMPT.md  README.md  RESEARCH-finish-detection.md  TASK-154.md  TASK-156.md  TASK-157.md  TASK-158.md  TASK-159.md  TASK-160.md  TASK-161.md  TASK-162.md  TASK-163.md  TASK-164.md  TASK-165.md  TASK-166.md  TASK-167.md  TASK-168.md  TASK-170.md  TASK-171.md  TASK-173.md  TASK-174.md  TASK-176.md  TASK-179.md  TASK-182.md  TASK-183.md  TASK-184.md  TASK-185.md  TASK-186.md  TASK-187.md  TASK-188.md  TASK-189.md  TASK-190.md  TASK-191.md  (+59 more)
.claude/agents/: task-planner.md  worktree-implementer.md
.claude/skills/archive-kanban-dev/: SKILL.md
.claude/skills/implement-kanban-dev/: SKILL.md
.claude/skills/merge-auto-kanban-dev/: SKILL.md
.claude/skills/merge-kanban-dev/: SKILL.md
.claude/skills/plan-ask-kanban-dev/: SKILL.md
.claude/skills/plan-assume-kanban-dev/: SKILL.md
.claude/skills/plan-parallel-kanban-dev/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/task/: SKILL.md
.claude/skills/update-docs/: SKILL.md
.claude/skills/windows-parity-audit/: SKILL.md  windows-landmines.md
.github/workflows/: ci.yml  release.yml
docs/: linux-desktop-integration.md  linux-packaging.md  macos-permissions.md
docs/ui-v2-handoff/: DESIGN-SPEC.md  README.md  ReCue-v2-demo.html
docs/ui-v2-handoff/assets/: WaveEngine.js  fx.js
packaging/aur/recue-bin/: .SRCINFO  PKGBUILD
scripts/: aur-bump.sh  bundle-report.mjs  gen-macos-ci-cert.sh  generate-release-body.mjs  install-linux-desktop.sh  linux-verify.sh  polish-dmg.sh  render-dmg-background.sh  sign-macos-local.sh
src/: App.tsx  MainApp.tsx  agents.test.ts  agents.ts  autoContinue.test.ts  autoContinue.ts  boot.test.ts  boot.ts  branchFilter.test.ts  branchFilter.ts  decodeOutput.test.ts  decodeOutput.ts  devMock.ts  editors.test.ts  editors.ts  fileClaims.test.ts  fileClaims.ts  fileRank.test.ts  fileRank.ts  gitRefresh.test.ts  gitRefresh.ts  inputProps.ts  ipc.ts  itemTypeOrder.test.ts  itemTypeOrder.ts  keybinds.test.ts  keybinds.ts  main.tsx  menu.test.ts  modal.test.ts  notify.ts  outputBus.test.ts  outputBus.ts  patchnotes.test.ts  paths.test.ts  paths.ts  platform.test.ts  platform.ts  prefetch.ts  saverRegistry.test.ts  (+32 more)
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/linux/: recue.desktop
src-tauri/src/: agents.rs  autocontinue.rs  boot.rs  child_env.rs  commands.rs  container.rs  early_settings.rs  editors.rs  file_claims.rs  files.rs  git.rs  hook_bridge.rs  lib.rs  linux_desktop.rs  linux_gtk.rs  linux_webkit.rs  main.rs  menu.rs  path_env.rs  primary.rs  pty.rs  skills.rs  store.rs  terminal_views.rs  title.rs  usage.rs  window_state.rs
src/components/: ModalHost.tsx  markdownCheckboxes.tsx
src/components/AgentHeaderMenu/: AgentHeaderMenu.module.css  AgentHeaderMenu.tsx
src/components/Attention/: Attention.module.css  Attention.tsx  attentionQueue.test.ts  attentionQueue.ts
src/components/AutoContinuePrompt/: AutoContinuePrompt.module.css  AutoContinuePrompt.tsx
src/components/AutoContinueToggle/: AutoContinueToggle.module.css  AutoContinueToggle.tsx
src/components/BigMode/: BigModeModal.module.css  BigModeModal.tsx
src/components/BusyIndicator/: BusyIndicator.module.css  BusyIndicator.tsx
src/components/Canvas/: Canvas.module.css  Canvas.tsx  CanvasSurface.tsx  CanvasTabs.tsx  TemplatePendingPanel.tsx  canvasDrop.test.ts  canvasDrop.ts  canvasSchedule.test.ts  canvasSchedule.ts  canvasToTemplate.test.ts  canvasToTemplate.ts  canvasTree.test.ts  canvasTree.ts  templateBlocks.test.ts  templateBlocks.ts  templateInstantiate.test.ts  templateInstantiate.ts
src/components/CanvasCloseModal/: CanvasCloseModal.module.css  CanvasCloseModal.tsx
src/components/CanvasWindow/: CanvasWindow.module.css  CanvasWindow.tsx
src/components/Checkbox/: Checkbox.module.css  Checkbox.tsx
src/components/ClaimBanner/: ClaimBanner.module.css  ClaimBanner.tsx
src/components/ClaudeMissing/: ClaudeMissing.module.css
src/components/CloneRepoModal/: CloneRepoModal.module.css  CloneRepoModal.tsx
src/components/ConfirmRemoveModal/: ConfirmRemoveModal.module.css  ConfirmRemoveModal.tsx
src/components/CreatePanelModal/: CreatePanelModal.module.css  CreatePanelModal.tsx  panelTypes.test.ts  panelTypes.ts
src/components/DesignSample/: DesignSample.module.css  DesignSample.tsx
src/components/DetachedNote/: DetachedNote.module.css  DetachedNote.tsx
src/components/DiffInspector/: DiffInspector.module.css  DiffInspector.tsx  diffSeen.test.ts  diffSeen.ts  diffSort.test.ts  diffSort.ts
src/components/EditorPicker/: EditorPicker.module.css  EditorPickerModal.tsx
src/components/EmptyState/: EmptyState.module.css  EmptyState.tsx
src/components/FilePicker/: FilePicker.module.css  FilePicker.tsx
src/components/FileSwitcher/: FileSwitcher.module.css  FileSwitcher.tsx
src/components/FileTree/: FileTree.module.css  FileTree.tsx  buildFileTree.test.ts  buildFileTree.ts  fileStatus.test.ts  fileStatus.ts
src/components/FileViewer/: FileViewer.module.css  FileViewer.tsx  MermaidBlock.tsx  fileType.test.ts  fileType.ts  gutter.test.ts  gutter.ts  lineCap.test.ts  lineCap.ts  mermaid.test.ts  mermaid.ts  prism.test.ts  prism.ts  useFileDiffGutter.ts
src/components/Focus/: Focus.module.css  Focus.tsx
src/components/GlobalSearch/: GlobalSearch.module.css  GlobalSearch.tsx  search.test.ts  search.ts
src/components/ItemContent/: ItemContent.module.css  ItemContent.tsx  itemTitle.ts
src/components/Kanban/: KanbanPanel.module.css  kanbanOps.ts  (+4 more)
src/patchnotes/: 0.0.1.json  1.0.0.json  1.0.2.json  1.0.3.json  1.1.1.json  1.1.2.json  1.1.3.json  1.1.4.json  1.1.5.json  1.1.6.json  1.1.7.json  1.2.1.json  1.3.0.json  1.3.1.json  2.0.0.json  2.0.1.json  2.0.2.json  2.1.0.json  2.1.1.json
src/styles/: atoms.css  fonts.css  global.css  menu.css  modal.css  tokens.css
src/types/: index.ts
(+112 files in other folders)
