[package]
name = "recue"
version = "1.0.0"
description = "ReCue — run and manage many live claude CLI sessions"
authors = ["Erik de Jager"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "recue_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
thiserror = "2.0.18"
uuid = { version = "1.23.3", features = ["v4"] }
tauri-plugin-dialog = "2.7.1"
# In-app auto-update skeleton (#190, re-introducing #15 removed by #62). Inert until
# a real signing keypair is generated (deferred) — see `tauri.conf.json` placeholder
# pubkey + `createUpdaterArtifacts` off.
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
# 5-hour usage bar (#154): a single blocking HTTPS GET to the undocumented OAuth
# usage endpoint. ureq keeps the OAuth token in-process (never argv/logs, unlike a
# curl shell-out) and its rustls backend needs no system TLS. Used only by usage.rs.
ureq = { version = "2", features = ["json", "tls"] }
# Terminal paste on Windows (#220): the cross-platform OS clipboard. Read-text is
# called from JS (gated by the `clipboard-manager:allow-read-text` capability); the
# image read is done Rust-side in `save_clipboard_image` (ClipboardExt, no capability).
tauri-plugin-clipboard-manager = "2.3.2"
# Encode a clipboard image (raw RGBA) to a temp PNG for image paste (#220) — claude
# attaches the file when its path is pasted. Pure-Rust, no system deps.
png = "0.18.1"
# base64-encode PTY output before emitting `session://output` (#261). serde renders a
# `Vec<u8>` as a JSON integer array (~4 chars/byte) that the single WebView main thread
# must `JSON.parse` — under heavy output that starved React inputs everywhere. base64 is
# ~1.33 chars/byte and decodes with a tight `atob` loop. Already in the dep tree
# (transitive); pulling it direct adds no new compile. Pure-Rust, platform-neutral.
base64 = "0.22"

[lints.clippy]
all = "warn"
