[package]
name = "recue"
version = "2.0.1"
description = "ReCue — run and manage many live claude CLI sessions"
authors = ["Erik de Jager"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "recue_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
thiserror = "2.0.18"
uuid = { version = "1.23.3", features = ["v4"] }
tauri-plugin-dialog = "2.7.1"
# In-app auto-update skeleton (#190, re-introducing #15 removed by #62). Inert until
# a real signing keypair is generated (deferred) — see `tauri.conf.json` placeholder
# pubkey + `createUpdaterArtifacts` off.
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
# 5-hour usage bar (#154): a single blocking HTTPS GET to the undocumented OAuth
# usage endpoint. ureq keeps the OAuth token in-process (never argv/logs, unlike a
# curl shell-out) and its rustls backend needs no system TLS. Used only by usage.rs.
ureq = { version = "2", features = ["json", "tls"] }
# Terminal paste on Windows (#220): the cross-platform OS clipboard. Read-text is
# called from JS (gated by the `clipboard-manager:allow-read-text` capability); the
# image read is done Rust-side in `save_clipboard_image` (ClipboardExt, no capability).
tauri-plugin-clipboard-manager = "2.3.2"
# Native OS notifications (#336): backs per-agent "watch" — a native toast when a
# watched agent finishes a turn / needs input. Cross-platform (macOS + Windows);
# the frontend sends the notification, this exposes the plugin + capability.
tauri-plugin-notification = "2"
# One running instance (Multi-window 10/16): a second launch pokes the first instance
# (Windows named mutex / Linux D-Bus / macOS unix socket) to open a new full app window
# and exits — previously a second process re-resumed the SAME session uuids and fought
# over sessions.json. Rust-only (no JS commands → no capability entry). Linux pulls
# zbus transitively; macOS/Windows stay light.
tauri-plugin-single-instance = "2"
# Encode a clipboard image (raw RGBA) to a temp PNG for image paste (#220) — claude
# attaches the file when its path is pasted. Pure-Rust, no system deps.
png = "0.18.1"
# base64-encode PTY output before emitting `session://output` (#261). serde renders a
# `Vec<u8>` as a JSON integer array (~4 chars/byte) that the single WebView main thread
# must `JSON.parse` — under heavy output that starved React inputs everywhere. base64 is
# ~1.33 chars/byte and decodes with a tight `atob` loop. Already in the dep tree
# (transitive); pulling it direct adds no new compile. Pure-Rust, platform-neutral.
base64 = "0.22"

# Kill an agent's whole PTY **process group** on unix (#354). portable-pty's unix spawn
# already makes the child a session/process-group leader (`setsid()`), so `killpg(child_pid,
# …)` reaches claude's MCP servers / tool children and nothing else. libc is already in the
# dependency tree (via portable-pty), so this adds no new compile; Windows never sees it —
# its kill path stays `ChildKiller::kill()` → `TerminateProcess`.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Linux desktop identity (#362): pin GLib's program name so the window's WM_CLASS /
# Wayland app_id is a stable `recue` (never an argv[0]/AppRun accident) and the
# generated .desktop's StartupWMClass can be a fact. glib 0.18 is already in the
# dependency tree (via tao/gtk), so this adds no new compilation. Linux-only —
# macOS/Windows never build it. See `src/linux_desktop.rs`.
[target.'cfg(target_os = "linux")'.dependencies]
glib = "0.18"

# Mock-runtime unit tests for the thin `AppHandle` glue (primary.rs / file_claims.rs /
# window_state.rs): enables `tauri::test` (mock_builder / MockRuntime) for `cargo test` /
# clippy --all-targets / llvm-cov builds only — dev-dep feature unification never reaches
# a plain `cargo build` or the release bundles, so the shipped app is byte-identical.
[dev-dependencies]
tauri = { version = "2", features = ["test"] }

[lints.clippy]
all = "warn"

# Release profile (#358). Cargo's stock `release` defaults (no LTO, 16 codegen units, an
# unstripped symbol table) shipped a needlessly large binary — which every bundle pays for,
# and which the Linux **AppImage pays for at every launch**: its squashfs image is
# decompressed / paged in on cold start (a known Tauri+AppImage cost —
# tauri-apps/tauri discussions #11157). These are Tauri's standard size recommendations
# MINUS `panic = "abort"`, which is deliberately rejected (see the block comment below).
#
# Only `release.yml` (a version-bump push to `main`) pays the extra build time: the PR gate
# (`ci.yml`) runs clippy / `cargo test` / `llvm-cov` on the dev+test profiles, and
# `npm run tauri dev` uses the dev profile — neither is affected.
[profile.release]
# Cross-crate ("fat") LTO: inline + dead-code-eliminate across the whole dependency graph
# (tauri, wry, portable-pty, ureq/rustls, serde). The biggest win after `strip`. It costs
# link time and link-time memory — if a release leg ever OOMs or the pipeline gets painful,
# drop to `lto = "thin"`, which keeps most of the win for roughly a third of the link cost.
lto = true
# One codegen unit: no cross-unit duplication, best inlining, smallest code.
codegen-units = 1
# Optimize for size. The only CPU-bound work in ReCue's hot path is the PTY output pipeline
# (`Scrollback::push` → `coalesce_output_events` → `commands::encode_output`), which runs at
# hundreds of MB/s while a busy `claude` TUI repaint storm produces single-digit MB/s — so
# there is no throughput to lose here, and size is what this profile is buying. The
# `#[ignore]`d `pty::tests::bench_output_hot_path` measures those three stages if anyone
# wants to revisit `"s"` vs `3`:
#   cargo test --manifest-path src-tauri/Cargo.toml --release \
#     -- --ignored --nocapture bench_output_hot_path
opt-level = "s"
# Drop the symbol table from the shipped artifact. `debug` is already false in release, and
# there is no crash reporter / symbolication pipeline that depends on symbols. On MSVC debug
# info lives in a PDB that release never emits, so this is near-free there; on macOS the
# strip happens at link time, long before the bundler code-signs, so Hardened Runtime /
# entitlements / notarization (#292/#314/#321) are unaffected.
strip = true

# `panic` is DELIBERATELY LEFT AT THE DEFAULT ("unwind"). **Do not set `panic = "abort"`.**
# ReCue is a supervisor of many long-lived PTY sessions, driven by always-running threads:
# the per-session reader (`pty.rs reader_loop`), the busy/idle monitor, the title worker, the
# event forwarder, and the schedule/recurring poll loop (`lib.rs`). With unwinding, a panic
# in any of them — including one thrown from inside a dependency — kills **only that thread**;
# the process, every other live agent, and every detached canvas window survive. The backend
# is written for exactly that: there is not one `lock().unwrap()` in the tree — every mutex
# take handles a poisoned lock explicitly. With `panic = "abort"` the same panic takes the
# whole app down and every live session with it, in exchange for the *smallest* of the four
# size levers (unwind tables / landing pads, typically ~5–10%). Not worth it here.
